--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,95 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  padding-top: 15%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttonWrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.formRow  {
+  margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 768px) and (orientation:portrait) {
+  .formRow {
+    margin-bottom: 0.5rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .form-signin {
+    padding-top: 45%;
+  }
+
+  .gameContainer {
+    padding-top: 20px;
+  }
+}
+
+@media (max-width: 823px) and (orientation:landscape) {
+  .formRow {
+    margin-bottom: 0.2rem;
+  }
+
+  .form-signin {
+    padding-top: 7%;
+  }
+
+  .gameContainer {
+    padding-top: 15px;
+  }
+}
+
+.buttonStyle {
+  width: 100%;
+}
+
+.spinner-border {
+  margin: auto;
+  display: flex;
+  width: 7rem;
+  height: 7rem;
+}
+
+.gameContainer {
+  padding-top: 15px;
+}
+
+.square {
+  float: left;
+  width: 120px;
+  height: 120px;
+}
+
+.border-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.game {
+  position: absolute;
+  top: 25%;
+
+  display: flex;
+  flex-direction: row;
+}
+
+@media (max-width: 991px)  {
+  .game {
+    top: 0;
+  }
+
+  .square {
+    width: 70px;
+    height: 70px;
   }
 }
