--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap");
+
 .App {
   text-align: center;
 }
 
+body {
+  font-family: 'Lexend Mega', sans-serif;
+}
+
+button, .btn {
+  padding: 10px !important;
+}
+
+.h-100 {
+  height: 98%!important;
+}
+
 .form-signin {
   width: 100%;
-  max-width: 330px;
+  max-width: 480px;
   padding: 15px;
   margin: auto;
   padding-top: 15%;
@@ -115,10 +129,11 @@
 @media (max-width: 991px)  {
   .game {
     top: 0;
+    padding-bottom: 20px;
   }
 
   .chips {
-    top: 41%
+    top: 48%
   }
 
   .square {
@@ -127,8 +142,8 @@
   }
 
   .chip {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
   }
 
   .chipImg {
