--- a/src/App.css
+++ b/src/App.css
@@ -119,15 +119,23 @@ button, .btn {
  .pendChoice {
    border: 3px solid #7EDF9B;
    border-radius: 3px;
+   padding: 7px !important;
  }
 
  .pendDecision {
    border: 3px solid #FFA0A0;
+   padding: 7px !important;
  }
 
  .chip:focus {
   outline: none;
   box-shadow: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .footer {
+    padding-top: 90px !important;
+  }
 }
 
 @media (max-width: 991px)  {
@@ -189,7 +197,7 @@ button, .btn {
   box-shadow: 0px 2px 1.5px #888888;
 }
 
-#turnSpan, #donateButton {
+#turnSpan, #donateButton, #homeButton {
   padding: 7px 20px;
   margin: 10px 0;
   border-radius: 5px;
@@ -211,6 +219,6 @@ button, .btn {
 }
 
 .modal-dialog {
-  margin-left: 25px !important;
+  /* margin-left: 25px !important; */
   padding: 15px;
 }
